Detect devices for existing brands: Doro, Xiaomi, Turbo-X, Majestic, Energizer, Ulefone, Prestigio, Nomi, NGM, Lenovo, Blu, HTC, ZTE, Motorola, Digma (#6822)
* feat(device) detect brand Xiaomi model: MiTV Stick (MiTV-AESP0)
feat(device) detect brand Huawei model: Mate 30 RS Porsche Design (LIO-AN00P)
feat(device) detect brand Lava model: Iris 46 (LH9950), Iris 59 (LE9930)
feat(device) detect brand Lenovo models: A5s (L18081), A6 Note (L19041), A7 (L19111),
 K5 Pro (L38041), K9 (L38043), S5 Pro GT(L58091), A8 (L10041), Z6 Youth (L38111),
 Z5 Pro GT L78032), Legion Pro (L79031), Z6 Pro, Vibe C (A2020a40), A6010 Pro

* feat(device) detect brand Turbo-X model: Mercury
feat(device) detect brand Majestic model: Crono 54
feat(device) detect brand Energizer model: Power Max P490S
feat(device) detect brand Ulefone models: Power 5S, Power 3S, Power 3L
feat(device) detect brand Prestigio model: Muze M3 LTE (PSP3515DUO)
feat(device) detect brand Nomi models: Evo M1 (i5011), Evo M (i5010), i506 Shine (i506), Iron-M (I4070), Corsa Pro (C070020)

* feat(device) detect brand Prestigio models: Wize PX3 (PSP3528DUO), Wize NK3 (PSP3527DUO), Muze B3 (PSP3512DUO),
 Wize OK3 (PSP3468DUO), MultiPad Wize 3618 4G, Grace 3118 3G, MultiPad Wize 3131 3G, MultiPad Wize 3618 4G
feat(device) detect brand NGM model: Smart 5 Plus

* feat(device) detect brand Lenovo models: Phab Plus (PB1-770M), Vibe X3 (X3a40), Vibe S1 Lite (S1La40), Z6 Pro (L78051), K10 Plus (L39051), IdeaTab A10-70 (A7600), Tab V7 (PB-6505MC)
feat(device) detect brand Ulefone model: Paris X

* feat(device) detect brand Digma model: Plane 8.6 3G (PS8086MG)

* feat(device) detect brand Blu model: Vivo XL3 Plus
feat(device) detect brand Xiaomi model: Redmi Note 5A
feat(device) detect brand Lenovo model: K4 Note (A7010)
feat(device) detect brand HTC model: U11 Eyes (2Q4R100)
feat(device) detect brand Doro model: 8035
feat(device) detect brand ZTE model: ZFive C LTE (Z558VL), Blade Force (N9517), Blade Max 

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -97,6 +97,8 @@ HTC:
       model: 'U12 Plus'
     - regex: 'U11 life(?:[);/ ]|$)'
       model: 'U11 Life'
+    - regex: '(?:U11 Eyes|2Q4R100)(?:[);/ ]|$)'
+      model: 'U11 Eyes'
     - regex: 'XV6975(?:[);/ ]|$)'
       model: 'Imagio'
     - regex: 'PG86100(?:[);/ ]|$)'
@@ -2864,7 +2866,7 @@ Bitel:
 
 # Blu
 Blu:
-  regex: 'BLU[ _]|(?:blu|Dash)[ _]([^/;)]+)(?: Build|[;)])|(?:Studio[ _](5.0K|5.5|View XL|Mega|C 8\+8|[CGM][ _]HD|[CGX]|SELFIE|Selfie LTE|Touch|M5 Plus|J[1258]|X8 HD)|Advance (4.0 ?[LM]|5.[02](?: HD)?|A4|L[45])|ENERGY (DIAMOND|XL)|Energy X 2|LIFE XL|B110DL|Dash (?:X[2L]|L3)|PURE (?:X[LR]|MINI|View)|Life One X2|G90(?: PRO)?|Grand M3|GRAND (?:5.5 HD|XL LTE)|R1 (?:HD|PLUS)|R2 (?:LTE|Plus)|Tank Xtreme [45].0|Tank Xtreme Pro|Touchbook M7 Pro|DASH X PLUS|C[456] 2019|BOLD N1|B130DL|Vivo (?:5 Mini|One Plus|5R|XL2|8L)|C5L 2020)(?:[);/ ]|$)'
+  regex: 'BLU[ _]|(?:blu|Dash)[ _]([^/;)]+)(?: Build|[;)])|(?:Studio[ _](5.0K|5.5|View XL|Mega|C 8\+8|[CGM][ _]HD|[CGX]|SELFIE|Selfie LTE|Touch|M5 Plus|J[1258]|X8 HD)|Advance (4.0 ?[LM]|5.[02](?: HD)?|A4|L[45])|ENERGY (DIAMOND|XL)|Energy X 2|LIFE XL|B110DL|Dash (?:X[2L]|L3)|PURE (?:X[LR]|MINI|View)|Life One X2|G90(?: PRO)?|Grand M3|GRAND (?:5.5 HD|XL LTE)|R1 (?:HD|PLUS)|R2 (?:LTE|Plus)|Tank Xtreme [45].0|Tank Xtreme Pro|Touchbook M7 Pro|DASH X PLUS|C[456] 2019|BOLD N1|B130DL|Vivo (?:5 Mini|One Plus|5R|XL2|XL3 Plus|8L)|C5L 2020)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Advance (4.0 ?[LM]|4.0|5.[02](?: HD)?|A4|L[54])'
@@ -2959,8 +2961,8 @@ Blu:
       model: 'Vivo Selfie'
     - regex: '(?:BLU[_ ])?Vivo 5 Mini'
       model: 'Vivo 5 Mini'
-    - regex: '(?:BLU[_ ])?Vivo One Plus'
-      model: 'Vivo One Plus'
+    - regex: '(?:BLU[_ ])?Vivo (One|XL3) Plus'
+      model: 'Vivo $1 Plus'
     - regex: '(?:BLU[_ ])?Vivo (5R|XL2|8L)'
       model: 'Vivo $1'
 
@@ -7271,6 +7273,8 @@ Huawei:
       model: 'Mate 30'
     - regex: 'TAS-AN00(?:[);/ ]|$)'
       model: 'Mate 30 5G'
+    - regex: 'LIO-AN00P(?:[);/ ]|$)'
+      model: 'Mate 30 RS Porsche Design'
     - regex: 'SPN-AL00(?:[);/ ]|$)'
       model: 'Mate 30 Lite'
     - regex: 'LIO-(?:[TA]L00|L29|AN00)(?:[);/ ]|$)'
@@ -9169,6 +9173,10 @@ Lava:
       model: 'Z52'
     - regex: 'LH9810(?:[);/ ]|$)'
       model: 'Iris 52'
+    - regex: 'LE9930(?:[);/ ]|$)'
+      model: 'Iris 59'
+    - regex: 'LH9950(?:[);/ ]|$)'
+      model: 'Iris 46'
     - regex: 'LN9910(?:[);/ ]|$)'
       model: 'Z41'
     - regex: 'LE9910(?:[);/ ]|$)'
@@ -9435,7 +9443,7 @@ Lenovo:
     - regex: '(?:Lenovo[ _])?A5500-[HF]'
       model: 'IdeaTab A8-50'
       device: 'tablet'
-    - regex: 'Lenovo ?A7600-[HF]'
+    - regex: 'Lenovo ?A7600'
       model: 'IdeaTab A10-70'
       device: 'tablet'
     - regex: 'A2107A-H'
@@ -9521,6 +9529,9 @@ Lenovo:
       device: 'tablet'
     - regex: 'TB-7504X(?:[);/ ]|$)'
       model: 'Tab 7'
+      device: 'tablet'
+    - regex: 'PB-6505MC'
+      model: 'Tab V7'
       device: 'tablet'
     - regex: 'TB-X606[FXV](?:[);/ ]|$)'
       model: 'Tab M10 FHD Plus'
@@ -9627,6 +9638,12 @@ Lenovo:
       device: 'tablet'
     - regex: 'L18011(?:[);/ ]|$)'
       model: 'A5'
+    - regex: 'L18081(?:[);/ ]|$)'
+      model: 'A5s'
+    - regex: 'L19111(?:[);/ ]|$)'
+      model: 'A7'
+    - regex: 'L10041(?:[);/ ]|$)'
+      model: 'A8'
     - regex: 'Z2 Plus'
       model: 'Z2 Plus'
     - regex: 'Z2151'
@@ -9643,34 +9660,48 @@ Lenovo:
       model: 'K3 Note'
     - regex: 'K(1[30]) Note(?:[);/ ]|$)'
       model: 'K$1 Note'
-    - regex: 'A7010a48(?:[);/ ]|$)'
+    - regex: 'A7010(?:a48)?(?:[);/ ]|$)'
       model: 'K4 Note'
     - regex: 'K350t(?:[);/ ]|$)'
       model: 'K5'
     - regex: 'L38011(?:[);/ ]|$)'
       model: 'K5 Play'
+    - regex: 'L38041(?:[);/ ]|$)'
+      model: 'K5 Pro'
+    - regex: 'L39051(?:[);/ ]|$)'
+      model: 'K10 Plus'
     - regex: '(?:A7020a4[08]|L38012)(?:[);/ ]|$)'
       model: 'K5 Note'
+    - regex: 'L19041(?:[);/ ]|$)'
+      model: 'A6 Note'
     - regex: 'K31-t3(?:[);/ ]|$)'
       model: 'K31'
+    - regex: 'A6010Pro(?:[);/ ]|$)'
+      model: 'A6010 Pro'
     - regex: '(?:A6020a46|Vibe K5 Plus)(?:[);/ ]|$)'
       model: 'Vibe K5 Plus'
     - regex: '(?:Lenovo-)?(?:A6020(?:a40|l36)|Vibe K5)(?:[);/ ]|$)'
       model: 'Vibe K5'
     - regex: 'VIBE Z2(?:[);/ ]|$)'
       model: 'Vibe Z2'
-    - regex: 'VIBE C(?:[);/ ]|$)'
+    - regex: '(?:VIBE C|A2020a40)(?:[);/ ]|$)'
       model: 'Vibe C'
     - regex: 'VIBE X2(?:[);/ ]|$)'
       model: 'Vibe X2'
+    - regex: 'X3a40(?:[);/ ]|$)'
+      model: 'Vibe X3'
     - regex: 'VIBE V7(?:[);/ ]|$)'
       model: 'Vibe V7'
     - regex: 'VIBE S6i Plus(?:[);/ ]|$)'
       model: 'Vibe S6i Plus'
     - regex: 'VIBE[ _]S([23567])i(?:[);/ ]|$)'
       model: 'Vibe S$1i'
+    - regex: 'L79031(?:[);/ ]|$)'
+      model: 'Legion Pro'
     - regex: 'k33a48(?:[);/ ]|$)'
       model: 'K6'
+    - regex: 'L38043(?:[);/ ]|$)'
+      model: 'K9'
     - regex: 'P2A42(?:[);/ ]|$)'
       model: 'P2'
     - regex: 'k53a48(?:[);/ ]|$)'
@@ -9691,18 +9722,30 @@ Lenovo:
       model: 'Vibe Shot'
     - regex: 'S1a40(?:[);/ ]|$)'
       model: 'Vibe S1'
+    - regex: 'S1La40(?:[);/ ]|$)'
+      model: 'Vibe S1 Lite'
     - regex: 'L78071(?:[);/ ]|$)'
       model: 'Z5s'
     - regex: 'L78011(?:[);/ ]|$)'
       model: 'Z5'
     - regex: 'L78031(?:[);/ ]|$)'
       model: 'Z5 Pro'
+    - regex: '(?:Z6 Pro|L78051)(?:[);/ ]|$)'
+      model: 'Z6 Pro'
+    - regex: 'L78032(?:[);/ ]|$)'
+      model: 'Z5 Pro GT'
+    - regex: 'L38111(?:[);/ ]|$)'
+      model: 'Z6 Youth'
     - regex: 'L58041(?:[);/ ]|$)'
       model: 'S5 Pro'
+    - regex: 'L58091(?:[);/ ]|$)'
+      model: 'S5 Pro GT'
     - regex: 'L18021(?:[);/ ]|$)'
       model: 'A3'
     - regex: 'PB2-6(?:70M|50Y)(?:[);/ ]|$)'
       model: 'Phab 2'
+    - regex: 'PB1-770M(?:[);/ ]|$)'
+      model: 'Phab Plus'
     - regex: '(S90-A|P70-A)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'IdeaPad ?([^;/]*) Build'
@@ -11412,12 +11455,16 @@ Motorola:
       model: 'Moto E$1s'
     - regex: '(?:MOT-|Motorola-)?XT1030'
       model: 'Droid Mini'
+    - regex: '(?:MOT-|Motorola-)?XT1565'
+      model: 'Droid Maxx 2'
     - regex: '(?:MOT-|Motorola-)?XT1096'
       model: 'Moto X2'
     - regex: '(?:MOT-|Motorola-)?XT1254'
       model: 'Droid Turbo'
     - regex: '(?:MOT-|Motorola-)?XT10(?:28|3[1234]|68|69)'
       model: 'Moto G'
+    - regex: '(?:MOT-|Motorola-)?XT1609'
+      model: 'Moto G4 Play'
     - regex: '(?:MOT-|Motorola-)?XT1799-2'
       model: 'Moto G5s'
     - regex: '(?:MOT-|Motorola-)?XT180[3-5]|Moto G ?5S Plus'
@@ -11432,7 +11479,7 @@ Motorola:
       model: 'Moto G7 Plus'
     - regex: '(?:MOT-|Motorola-)?XT10(?:49|5[23568]|60|9[23457])'
       model: 'Moto X'
-    - regex: '(?:MOT-|Motorola-)?XT156[23]|Moto X Play(?:[);/ ]|$)'
+    - regex: '(?:MOT-|Motorola-)?XT156[234]|Moto X Play(?:[);/ ]|$)'
       model: 'Moto X Play'
     - regex: '(?:MOT-|Motorola-)?XT1572'
       model: 'Moto X Style'
@@ -11906,9 +11953,11 @@ NextBook:
 
 # ngm
 NGM:
-  regex: 'NGM[_ ][a-z0-9]+|(Forward|Dynamic)[ _]?[^/;]+(?:Build|/)'
+  regex: 'NGM[_ ][a-z0-9]+|(Forward|Dynamic)[ _]?[^/;]+(?:Build|/)|Smart5Plus32GB'
   device: 'smartphone'
   models:
+    - regex: 'Smart5Plus32GB'
+      model: 'Smart 5 Plus'
     - regex: '(Forward|Dynamic)[ _]?([^/;]+) Build'
       model: '$1 $2'
     - regex: '(Forward|Dynamic)[ _]?([^/;]+)/'
@@ -11985,12 +12034,20 @@ Nomi:
   models:
     - regex: 'i501[23](?:[);/ ]|$)'
       model: 'Evo M2'
-    - regex: 'Nomi_i5001(?:[);/ ]|$)'
+    - regex: 'Nomi[ _]i5010(?:[);/ ]|$)'
+      model: 'Evo M'
+    - regex: 'Nomi[ _]i5001(?:[);/ ]|$)'
       model: 'Evo M3'
+    - regex: 'Nomi[ _]i5011(?:[);/ ]|$)'
+      model: 'Evo M1'
+    - regex: 'Nomi[ _]i506(?:[);/ ]|$)'
+      model: 'i506 Shine'
     - regex: 'I5070(?:[);/ ]|$)'
       model: 'Iron-X'
     - regex: 'i5071(?:[);/ ]|$)'
       model: 'Iron-X1'
+    - regex: 'Nomi[_ ]I4070(?:[);/ ]|$)'
+      model: 'Iron-M'
     - regex: 'i5014(?:[);/ ]|$)'
       model: 'Evo M4'
     - regex: 'i5032(?:[);/ ]|$)'
@@ -12014,7 +12071,10 @@ Nomi:
       model: 'Ultra 3 Pro'
       device: 'tablet'
     - regex: '(?:Nomi_)?C070010'
+      device: 'tablet'
       model: 'Corsa'
+    - regex: '(?:Nomi_)?C070020'
+      model: 'Corsa Pro'
       device: 'tablet'
     - regex: '(?:Nomi_)?C070011'
       model: 'Corsa 2'
@@ -15377,6 +15437,9 @@ Prestigio:
     - regex: 'PSP3552DUO'
       device: 'smartphone'
       model: 'Muze H3'
+    - regex: 'PSP3515DUO'
+      device: 'smartphone'
+      model: 'Muze M3 LTE'
     - regex: 'PSP3495DUO'
       device: 'smartphone'
       model: 'Muze V3 LTE'
@@ -15398,6 +15461,9 @@ Prestigio:
     - regex: 'Muze C3(?:[);/ ]|$)'
       device: 'smartphone'
       model: 'Muze C3'
+    - regex: 'PSP3512DUO(?:[);/ ]|$)'
+      device: 'smartphone'
+      model: 'Muze B3'
     - regex: 'PSP3532DUO'
       device: 'smartphone'
       model: 'Muze F3'
@@ -15413,6 +15479,15 @@ Prestigio:
     - regex: 'PSP3537DUO'
       device: 'smartphone'
       model: 'Wize NV3'
+    - regex: 'PSP3528DUO'
+      device: 'smartphone'
+      model: 'Wize PX3'
+    - regex: 'PSP3527DUO'
+      device: 'smartphone'
+      model: 'Wize NK3'
+    - regex: 'PSP3468DUO'
+      device: 'smartphone'
+      model: 'Wize OK3'
     # explicit tables models
     - regex: 'PMT3277_3G'
       model: 'MultiPad Ranger 7.0" 3G'
@@ -15422,14 +15497,14 @@ Prestigio:
       model: 'Geo Vision Tour 3'
     - regex: 'PGPS7797(?:[);/ ]|$)'
       model: 'Geo Vision Tour 2'
-    - regex: 'PMT(3201|3157)_4G'
-      model: 'Grace $1 4G'
+    - regex: 'PMT(3118|3201|3157)[_ ]([34])G'
+      model: 'Grace $1 $2G'
     - regex: 'PMT3287_3G'
       model: 'MultiPad Ranger 8.0 3G'
     - regex: 'PMT3208[_ ]3G'
       model: 'MultiPad Wize 8.0 3G'
-    - regex: 'PMT1177_4G'
-      model: 'MultiPad Wize 1177 4G'
+    - regex: 'PMT(1177|3618|3131)_([34])GE?'
+      model: 'MultiPad Wize $1 $2G'
     - regex: 'PSP7546DUO([ _][A-Z]{2})?'
       model: 'X Pro'
     - regex: 'PSP7610DUO([ _][A-Z]{2})?'
@@ -15632,7 +15707,7 @@ Sendo:
 
 # Turbo-X
 Turbo-X:
-  regex: 'Turbo-X|Hive V 3G|Turbox_S3|Fire_II_WiFi'
+  regex: 'Turbo-X|(?:Hive V 3G|Turbox_S3|Fire_II_WiFi)(?:[);/ ]|$)|Mercury(?!/)'
   device: 'smartphone'
   models:
     # specific smartphone models
@@ -15642,6 +15717,9 @@ Turbo-X:
       model: 'A2'
     - regex: 'Turbo-X_e3(?:[);/ ]|$)'
       model: 'E3'
+    - regex: 'Mercury(?!/)'
+      model: 'Mercury'
+
     # specific tablet models
     - regex: 'Turbo-X Ice(?:[);/ ]|$)'
       device: 'tablet'
@@ -16835,7 +16913,7 @@ UTStarcom:
 
 # Ulefone
 Ulefone:
-  regex: 'Ulefone|Gemini Pro|Power_[356]|S(?:10|9)_Pro|(?:Note [89]P|Armor(?:[ _](?:[2367]|2S|X[236]|6[SE]|3WT|3W|X))?|U00[78][ _]Pro|Be[ _]X|Be[ _]Touch(?:[ _][23])?|Be[ _](?:One|Pure)(?:[ _]Lite)?|Note 11P)(?:[);/ ]|$)'
+  regex: 'Ulefone|Gemini Pro|Power_[356]|Power_5S|S(?:10|9)_Pro|(?:Note [89]P|Armor(?:[ _](?:[2367]|2S|X[236]|6[SE]|3WT|3W|X))?|U00[78][ _]Pro|Be[ _]X|Be[ _]Touch(?:[ _][23])?|Be[ _](?:One|Pure)(?:[ _]Lite)?|Note 11P|Paris_X)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'S(10|9)_Pro'
@@ -16856,6 +16934,8 @@ Ulefone:
       model: 'U007 Pro'
     - regex: 'U008 Pro'
       model: 'U008 Pro'
+    - regex: 'Paris_X'
+      model: 'Paris X'
     - regex: 'Armor[ _]X([236])(?:[);/ ]|$)'
       model: 'Armor X$1'
     - regex: 'Armor[ _]6S(?:[);/ ]|$)'
@@ -16882,7 +16962,7 @@ Ulefone:
       model: 'Armor'
     - regex: 'Gemini Pro(?:[);/ ]|$)'
       model: 'Gemini Pro'
-    - regex: 'Power[_ ]([356])'
+    - regex: 'Power[_ ]([356][SL]?)'
       model: 'Power $1'
     - regex: 'Note 8P(?:[);/ ]|$)'
       model: 'Note 8P'
@@ -17919,7 +17999,7 @@ POCO:
 
 # Xiaomi
 Xiaomi:
-  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)(?:[);/ ]|$)|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|POCOPHONE|(?:SHARK )?(KLE|MBU)-[AH]0|SK[RW]-[AH]0|PRS-H0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP[01]|AXSO0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006J10C|M2006C3(?:L[IGC]|LVG|MN?G|MT)|M2007J1(?:7[CGI]|SC)|M2002J9[EG]|HM2014819|WT88047|M2004J(?:7[AB]|19)C|M2012K11(?:[CG]|AC)|M2011K2[CG]|M2006C3[ML]II|M2003J15SC|M2007J3S[ICYGP]|M2007J22[CG]|M2103K19[GY]|M2101K(?:[79]AG|7AI|7B[GI]|6[GIRP]|7BNY|9[GC])|M2010J19S[CGYI]|M1908C3JGG|M2102(?:K1[CG]|J2SC)|HM NOTE 1(?:LTE|W)|MI[_ ]PLAY|XIG01|Qin 1s\+|MI_(NOTE_Pro|5X|4i|(?:A2|8)_Lite)|A001XM|lancelot'
+  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)(?:[);/ ]|$)|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|POCOPHONE|(?:SHARK )?(KLE|MBU)-[AH]0|SK[RW]-[AH]0|PRS-H0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP[01]|AXSO0|AESP0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006J10C|M2006C3(?:L[IGC]|LVG|MN?G|MT)|M2007J1(?:7[CGI]|SC)|M2002J9[EG]|HM2014819|WT88047|M2004J(?:7[AB]|19)C|M2012K11(?:[CG]|AC)|M2011K2[CG]|M2006C3[ML]II|M2003J15SC|M2007J3S[ICYGP]|M2007J22[CG]|M2103K19[GY]|M2101K(?:[79]AG|7AI|7B[GI]|6[GIRP]|7BNY|9[GC])|M2010J19S[CGYI]|M1908C3JGG|M2102(?:K1[CG]|J2SC)|HM NOTE 1(?:LTE|W)|MI[_ ]PLAY|XIG01|Qin 1s\+|MI_(NOTE_Pro|5X|4i|(?:A2|8)_Lite)|A001XM|lancelot'
   device: 'smartphone'
   models:
     # specific smartphone models
@@ -18097,6 +18177,9 @@ Xiaomi:
       device: 'tv'
     - regex: 'MiTV-MSSP1(?:[);/ ]|$)'
       model: 'MiTV 4S'
+      device: 'tv'
+    - regex: 'MiTV-AESP0(?:[);/ ]|$)'
+      model: 'MiTV Stick'
       device: 'tv'
     - regex: '(?:MiTV-AXSO0|MiTV4(?:A|-ANSM0)|MiTV-MSSP0)(?:[);/ ]|$)'
       model: 'MiTV 4A'
