feat(device) detect brand Asus model: ZenFone Max Pro M1 (ASUS_X00TDE) feat(device) detect brand Neffos models: C9s, C7s, C9 Max feat(device) detect brand Nobby model: X800 Pro feat(device) detect brand Xiaomi models: Mi Mix 3 5G, Mi 8, Mi 8 Explorer Edition
feat(device) renamed all models from the brand Xiaomi to single format

--- a/Tests/fixtures/smartphone-23.yml
+++ b/Tests/fixtures/smartphone-23.yml
@@ -338,7 +338,7 @@
   device:
     type: smartphone
     brand: Xiaomi
-    model: MI 11 Ultra
+    model: Mi 11 Ultra
   os_family: Android
   browser_family: Chrome
 -
@@ -392,7 +392,7 @@
   device:
     type: smartphone
     brand: Xiaomi
-    model: MI 5X
+    model: Mi 5X
   os_family: Android
   browser_family: Android Browser
 -
@@ -3596,7 +3596,7 @@
   device:
     type: smartphone
     brand: Xiaomi
-    model: MI 11i
+    model: Mi 11i
   os_family: Android
   browser_family: Chrome
 -
@@ -3614,7 +3614,7 @@
   device:
     type: smartphone
     brand: Xiaomi
-    model: MI 11 Ultra
+    model: Mi 11 Ultra
   os_family: Android
   browser_family: Chrome
 -
@@ -3704,7 +3704,7 @@
   device:
     type: smartphone
     brand: Xiaomi
-    model: MI 11 Lite 5G
+    model: Mi 11 Lite 5G
   os_family: Android
   browser_family: Chrome
 -
@@ -5832,7 +5832,7 @@
   device:
     type: smartphone
     brand: Xiaomi
-    model: MI 9T
+    model: Mi 9T
   os_family: Android
   browser_family: Chrome
 -
