--- a/Tests/fixtures/smartphone-24.yml
+++ b/Tests/fixtures/smartphone-24.yml
@@ -1277,7 +1277,7 @@
   device:
     type: smartphone
     brand: Xiaomi
-    model: MI MIX 2
+    model: Mi Mix 2
   os_family: Android
   browser_family: Unknown
 -
@@ -8416,7 +8416,7 @@
   device:
     type: smartphone
     brand: Xiaomi
-    model: MI 10 Pro
+    model: Mi 10 Pro
   os_family: Android
   browser_family: Chrome
 -
