--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4841,7 +4841,7 @@ Desay:
 
 # DEXP
 DEXP:
-  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|Larus_TV1|Ixion(?:ML4.7|ES250)|M150Storm|(?:SENIOR|F4[38]D8000K|VA(?:[12]10|170)|ML450|MS[56]50|BL(?:[123]50|160|155)|BS(?:155|160|[1256]50)|(?<!ILIUM )S(?:3[78]0|2[89]0|670)|AL(?:[12]40|[23]50)|AS(?:155|[123]60)| (?:N280i|P380i|R110|E210|B(?:450|340|35[05])|M445|T155|A(?:1[456]0|340)|GS15[035]|GL[23]55|G25[05]|G15[05]|ES750|XL150|Z[1-4]55|H170|P510|L2[17]0))(?:[);/ ]|$)'
+  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|Larus_TV1|Ixion(?:ML4.7|ES250)|M150Storm|(?:SENIOR|F4[38]D8000K|VA(?:[12]10|170)|ML450|MS[56]50|BL(?:[123]50|160|155)|BS(?:155|160|[1256]50)|(?<!ILIUM )S(?:3[78]0|2[89]0|670)|AL(?:[12]40|[23]50)|AS(?:155|[123]60)| (?:N280i|P380i|R1[18]0|Q110|E210|B(?:450|340|35[05])|M445|T155|A(?:1[456]0|340)|GS15[035]|GL[23]55|G25[05]|G15[05]|ES750|XL150|Z[1-4]55|H170|P510|L2[17]0))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Ixion[_ ]([^;/]+)(?: Build|\))'
@@ -4872,7 +4872,7 @@ DEXP:
     - regex: 'Ursus[ _]([^;/)]+)(?: Build|[);])'
       model: 'Ursus $1'
       device: 'tablet'
-    - regex: '(VA[21]10|VA170|E210|R110|N280i|P380i|P510|S2[89]0|S3[78]0|S670|H170|L2[17]0)(?:[);/ ]|$)'
+    - regex: '(VA[21]10|VA170|E210|R1[18]0|Q110|N280i|P380i|P510|S2[89]0|S3[78]0|S670|H170|L2[17]0)(?:[);/ ]|$)'
       model: 'Ursus $1'
       device: 'tablet'
 
@@ -9512,7 +9512,7 @@ Lenovo:
     - regex: 'TB-X605F(?:[);/ ]|$)'
       model: 'Tab M10'
       device: 'tablet'
-    - regex: 'TB-X705F(?:[);/ ]|$)'
+    - regex: 'TB-X705[FL](?:[);/ ]|$)'
       model: 'Tab P10'
       device: 'tablet'
     - regex: 'TB-J606L(?:[);/ ]|$)'
@@ -9535,6 +9535,9 @@ Lenovo:
       device: 'tablet'
     - regex: 'TB-X606[FXV](?:[);/ ]|$)'
       model: 'Tab M10 FHD Plus'
+      device: 'tablet'
+    - regex: 'TB-X605'
+      model: 'Tab M10 FHD'
       device: 'tablet'
     - regex: 'Lenovo TB-X306'
       model: 'Tab M10 HD'
@@ -11836,8 +11839,9 @@ NOA:
     - regex: 'NOA[_ ]([^;)/ ]+)'
       model: '$1'
 
+# Nobby (nobby.ru)
 Nobby:
-  regex: 'Nobby[ ](S500|X800|S300(?: Pro)?)(?:[);/ ]|$)'
+  regex: 'Nobby[ ](S500|X800(?: Pro)?|S300(?: Pro)?)(?:[);/ ]|$)'
   device: 'smartphone'
   model: '$1'
 
@@ -11878,7 +11882,7 @@ NEC:
       device: 'tablet'
       model: '$1'
 
-# Neffos (TP-Link)
+# Neffos (sub brand TP-Link) (neffos.com)
 Neffos:
   regex: 'Neffos|(TP601A)(?:[);/ ]|$)'
   device: 'smartphone'
@@ -18036,71 +18040,75 @@ Xiaomi:
     - regex: 'Xiaomi[_-]201481[123]|201481[123] Build'
       model: 'Hongmi 2 4G'
     - regex: 'MI[_ ]PLAY(?:[);/ ]|$)'
-      model: 'MI Play'
+      model: 'Mi Play'
     - regex: 'Mi 9 SE(?:[);/ ]|$)'
-      model: 'MI 9 SE'
+      model: 'Mi 9 SE'
     - regex: 'MI CC 9 Meitu Edition(?:[);/ ]|$)'
-      model: 'MI CC 9'
+      model: 'Mi CC 9'
     - regex: 'Xiaomi_M2001J2E_TD-LTE(?:[);/ ]|$)'
-      model: 'MI 10'
+      model: 'Mi 10'
     - regex: 'Mi 10 Pro(?:[);/ ]|$)'
-      model: 'MI 10 Pro'
+      model: 'Mi 10 Pro'
     - regex: 'M2011K2[CG](?:[);/ ]|$)'
-      model: 'MI 11'
+      model: 'Mi 11'
     - regex: 'M2007J3S[GI](?:[);/ ]|$)'
-      model: 'MI 10T Pro 5G'
+      model: 'Mi 10T Pro 5G'
     - regex: 'M2007J17G(?:[);/ ]|$)'
-      model: 'MI 10T Lite 5G'
+      model: 'Mi 10T Lite 5G'
     - regex: 'M2007J3S[CYP](?:[);/ ]|$)'
-      model: 'MI 10T 5G'
+      model: 'Mi 10T 5G'
     - regex: 'M2007J1SC(?:[);/ ]|$)'
-      model: 'MI 10 Ultra 5G'
+      model: 'Mi 10 Ultra 5G'
     - regex: 'M2102J2SC(?:[);/ ]|$)'
-      model: 'MI 10S'
+      model: 'Mi 10S'
     - regex: '(?:M2002J9[EG]|XIG01)(?:[);/ ]|$)'
-      model: 'MI 10 Lite 5G'
+      model: 'Mi 10 Lite 5G'
     - regex: 'M2007J17I(?:[);/ ]|$)'
-      model: 'MI 10i'
+      model: 'Mi 10i'
     - regex: 'M2012K11G(?:[);/ ]|$)'
-      model: 'MI 11i'
+      model: 'Mi 11i'
     - regex: 'M2101K9AG(?:[);/ ]|$)'
-      model: 'MI 11 Lite'
+      model: 'Mi 11 Lite'
     - regex: 'M2101K9[GC](?:[);/ ]|$)'
-      model: 'MI 11 Lite 5G'
+      model: 'Mi 11 Lite 5G'
     - regex: 'M2102K1[CG](?:[);/ ]|$)'
-      model: 'MI 11 Ultra'
+      model: 'Mi 11 Ultra'
     - regex: 'MI[ _]8[ _]Lite(?:[);/ ]|$)'
-      model: 'MI 8 Lite'
+      model: 'Mi 8 Lite'
+    - regex: 'MI 8 Explorer Edition(?:[);/ ]|$)'
+      model: 'Mi 8 Explorer Edition'
     - regex: 'Mi 9T Pro(?:[);/ ]|$)'
-      model: 'MI 9T Pro'
-    - regex: 'Mi9 Pro 5G(?:[);/ ]|$)'
-      model: 'MI 9 Pro 5G'
+      model: 'Mi 9T Pro'
+    - regex: 'Mi ?9 Pro 5G(?:[);/ ]|$)'
+      model: 'Mi 9 Pro 5G'
     - regex: 'MI ([89]) Lite(?:[);/ ]|$)'
-      model: 'MI $1 Lite'
+      model: 'Mi $1 Lite'
     - regex: 'MI 5s Plus(?:[);/ ]|$)'
-      model: 'MI 5s Plus'
+      model: 'Mi 5s Plus'
     - regex: 'Xiaomi_MDT2'
-      model: 'MI 5X'
+      model: 'Mi 5X'
     - regex: 'Xiaomi_2013061|2013061 Build'
-      model: 'MI 3'
+      model: 'Mi 3'
     - regex: 'Mi-4c(?:[);/ ]|$)'
-      model: 'MI 4C'
+      model: 'Mi 4C'
     - regex: 'MI 4W(?:[);/ ]|$)'
-      model: 'MI 4W'
+      model: 'Mi 4W'
     - regex: 'Mi_4i(?:[);/ ]|$)'
-      model: 'MI 4i'
-    - regex: 'MI MAX 3(?:[);/ ]|$)'
-      model: 'MI MAX 3'
-    - regex: 'MI MAX 2(?:[);/ ]|$)'
-      model: 'MI MAX 2'
+      model: 'Mi 4i'
+    - regex: 'MI 4 ?LTE(?:[);/ ]|$)'
+      model: 'Mi 4 LTE'
+    - regex: 'MI MAX ([23])(?:[);/ ]|$)'
+      model: 'Mi Max $1'
     - regex: 'Mi[ _]A2[ _]Lite(?:[);/ ]|$)'
-      model: 'MI A2 Lite'
+      model: 'Mi A2 Lite'
+    - regex: 'Mi MIX 3 5G(?:[);/ ]|$)'
+      model: 'Mi Mix 3 5G'
     - regex: 'MIX ([23])(?:[);/ ]|$)'
-      model: 'MI MIX $1'
+      model: 'Mi Mix $1'
     - regex: 'MIX 2S(?:[);/ ]|$)'
-      model: 'MI MIX 2S'
+      model: 'Mi Mix 2S'
     - regex: 'MIX(?:[);/ ]|$)'
-      model: 'MI MIX'
+      model: 'Mi Mix'
     - regex: 'POCOPHONE[ _]F1|POCO F1'
       model: 'Pocophone F1'
     - regex: 'Redmi 5 Plus'
@@ -18186,8 +18194,8 @@ Xiaomi:
     - regex: '(?:MiTV-AXSO0|MiTV4(?:A|-ANSM0)|MiTV-MSSP0)(?:[);/ ]|$)'
       model: 'MiTV 4A'
       device: 'tv'
-    - regex: '(MiTV)(4[CSX]|4)(?:[);/ ]|$)'
-      model: '$1 $2'
+    - regex: 'MiTV(4[CSX]|4)(?:[);/ ]|$)'
+      model: 'MiTV $1'
       device: 'tv'
 
       # specific phablet models
@@ -18245,7 +18253,7 @@ Xiaomi:
     - regex: 'Redmi[ _]([^;/) ]+)?'
       model: 'Redmi $1'
     - regex: 'MI_NOTE_Pro'
-      model: 'MI Note Pro'
+      model: 'Mi Note Pro'
       device: 'phablet'
     - regex: 'Mi Note 10 Pro'
       model: 'Mi Note 10 Pro'
@@ -18257,7 +18265,7 @@ Xiaomi:
       model: 'Mi Note 10'
       device: 'phablet'
     - regex: 'MI[ _]Note[ _]([^;/) ]+)?'
-      model: 'MI Note $1'
+      model: 'Mi Note $1'
       device: 'phablet'
 
     # specific feature phone models
@@ -18265,10 +18273,14 @@ Xiaomi:
       model: 'Qin 1s+'
 
     # general detections
-    - regex: '(MI(?:-One)?[ _](?:[^;/]*))Build'
-      model: '$1'
-    - regex: '(MI[ _][a-z0-9]+|MI-One[ _]?[a-z0-9]+)(?:[);/ ]|$)'
-      model: '$1'
+    - regex: 'MI[- ]One[ _]?Plus(?:[);/ ]|$)'
+      model: 'Mi One Plus'
+    - regex: 'Mi[- ]One[ _]?([a-z0-9]+)?(?: Build|[);]])'
+      model: 'Mi One $1'
+    - regex: 'MI[ _]([^;/]*) Build'
+      model: 'Mi $1'
+    - regex: 'MI[ _]([a-z0-9]+)(?:[);/ ]|$)'
+      model: 'Mi $1'
     - regex: 'HM Note ([^/;]+) (?:Build|MIUI)'
       device: 'phablet'
       model: 'Note'
