--- a/Tests/fixtures/phablet.yml
+++ b/Tests/fixtures/phablet.yml
@@ -4945,7 +4945,7 @@
   device:
     type: phablet
     brand: Xiaomi
-    model: MI Note LTE
+    model: Mi Note LTE
   os_family: Android
   browser_family: Android Browser
 -
@@ -4963,7 +4963,7 @@
   device:
     type: phablet
     brand: Xiaomi
-    model: MI Note Pro
+    model: Mi Note Pro
   os_family: Android
   browser_family: Unknown
 -
