--- a/Tests/fixtures/smartphone-17.yml
+++ b/Tests/fixtures/smartphone-17.yml
@@ -3409,7 +3409,7 @@
   device:
     type: smartphone
     brand: Xiaomi
-    model: MI 10 Lite 5G
+    model: Mi 10 Lite 5G
   os_family: Android
   browser_family: Unknown
 -
@@ -4451,7 +4451,7 @@
   device:
     type: smartphone
     brand: Xiaomi
-    model: MI 9 Lite
+    model: Mi 9 Lite
   os_family: Android
   browser_family: Unknown
 -
@@ -5693,7 +5693,7 @@
   device:
     type: smartphone
     brand: Xiaomi
-    model: MI 10T 5G
+    model: Mi 10T 5G
   os_family: Android
   browser_family: Chrome
 -
@@ -5711,7 +5711,7 @@
   device:
     type: smartphone
     brand: Xiaomi
-    model: MI 10T Pro 5G
+    model: Mi 10T Pro 5G
   os_family: Android
   browser_family: Chrome
 -
