--- a/Tests/fixtures/smartphone-18.yml
+++ b/Tests/fixtures/smartphone-18.yml
@@ -2426,7 +2426,7 @@
   device:
     type: smartphone
     brand: Xiaomi
-    model: MI 10 Ultra 5G
+    model: Mi 10 Ultra 5G
   os_family: Android
   browser_family: Android Browser
 - 
@@ -3846,7 +3846,7 @@
   device:
     type: smartphone
     brand: Xiaomi
-    model: MI 10 Lite 5G
+    model: Mi 10 Lite 5G
   os_family: Android
   browser_family: Chrome
 - 
@@ -8219,7 +8219,7 @@
   device:
     type: smartphone
     brand: Xiaomi
-    model: MI 10T 5G
+    model: Mi 10T 5G
   os_family: Android
   browser_family: Chrome
 -
