--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -2030,7 +2030,7 @@
   device:
     type: smartphone
     brand: Xiaomi
-    model: MI 10T Lite 5G
+    model: Mi 10T Lite 5G
   os_family: Android
   browser_family: Chrome
 -
@@ -2048,7 +2048,7 @@
   device:
     type: smartphone
     brand: Xiaomi
-    model: MI 10T Pro 5G
+    model: Mi 10T Pro 5G
   os_family: Android
   browser_family: Chrome
 -
@@ -2480,7 +2480,7 @@
   device:
     type: smartphone
     brand: Xiaomi
-    model: MI 11 Lite
+    model: Mi 11 Lite
   os_family: Android
   browser_family: Chrome
 -
@@ -4218,7 +4218,7 @@
   device:
     type: smartphone
     brand: Xiaomi
-    model: MI 11
+    model: Mi 11
   os_family: Android
   browser_family: Chrome
 -
@@ -4236,7 +4236,7 @@
   device:
     type: smartphone
     brand: Xiaomi
-    model: MI 10T 5G
+    model: Mi 10T 5G
   os_family: Android
   browser_family: Chrome
 -
@@ -4882,7 +4882,7 @@
   device:
     type: smartphone
     brand: Xiaomi
-    model: MI 10i
+    model: Mi 10i
   os_family: Android
   browser_family: Chrome
 -
@@ -5080,7 +5080,7 @@
   device:
     type: smartphone
     brand: Xiaomi
-    model: MI 4i
+    model: Mi 4i
   os_family: Android
   browser_family: Unknown
 -
@@ -5818,7 +5818,7 @@
   device:
     type: smartphone
     brand: Xiaomi
-    model: MI 4W
+    model: Mi 4W
   os_family: Android
   browser_family: Opera
 -
@@ -5836,7 +5836,7 @@
   device:
     type: smartphone
     brand: Xiaomi
-    model: MI MIX 2S
+    model: Mi Mix 2S
   os_family: Android
   browser_family: Opera
 -
@@ -5998,7 +5998,7 @@
   device:
     type: smartphone
     brand: Xiaomi
-    model: MI 11
+    model: Mi 11
   os_family: Android
   browser_family: Chrome
 -
@@ -6754,7 +6754,7 @@
   device:
     type: smartphone
     brand: Xiaomi
-    model: MI A2 Lite
+    model: Mi A2 Lite
   os_family: Android
   browser_family: Unknown
 -
@@ -6790,7 +6790,7 @@
   device:
     type: smartphone
     brand: Xiaomi
-    model: MI 8 Lite
+    model: Mi 8 Lite
   os_family: Android
   browser_family: Unknown
 -
@@ -8231,7 +8231,7 @@
   device:
     type: smartphone
     brand: Xiaomi
-    model: MI 10S
+    model: Mi 10S
   os_family: Android
   browser_family: Chrome
 -
