--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9542,6 +9542,9 @@ Lenovo:
     - regex: 'Lenovo TB-X306'
       model: 'Tab M10 HD'
       device: 'tablet'
+    - regex: 'Lenovo TB-X505' # 2019
+      model: 'Tab M10'
+      device: 'tablet'
     - regex: 'TB-7305I(?:[);/ ]|$)'
       model: 'Tab M7'
       device: 'tablet'
@@ -11679,8 +11682,13 @@ MyPhone:
       model: 'Pocket 2'
     - regex: 'myA17(?:[);/ ]|$)'
       model: 'myA17'
+    - regex: '(?:myPhone_)?Fun[_ ]?(\d)[_ ]?Lite'
+      model: 'FUN $1 Lite'
+    - regex: '(?:myPhone_)?Fun[_ ]?(\d)[_ ]?LTE'
+      model: 'FUN $1 LTE'
     - regex: '(?:myPhone_)?Fun_?([48]|18x9)'
       model: 'FUN $1'
+
     - regex: 'MyPhoneMY27'
       model: 'my27'
     - regex: 'myX12(?:[);/ ]|$)'
@@ -12861,7 +12869,7 @@ OPPO:
       model: 'R7 Plus F'
     - regex: '(?:OPPO[ _]?)?X9079(?:[);/ ]|$)'
       model: 'R9 Plus'
-    - regex: '(?:OPPO[ _]?)?CPH1607(?:[);/ ]|$)'
+    - regex: '(?:OPPO[ _]?)?(?:CPH1607|R9sk)(?:[);/ ]|$)'
       model: 'R9s'
     - regex: '(?:OPPO[ _]?)?(?:CPH1611|R9s Plus)(?:[);/ ]|$)'
       model: 'R9s Plus'
@@ -17811,8 +17819,8 @@ Wiko:
       model: 'Pulp 4G'
     - regex: '(?:WIKO-)?Pulp'
       model: 'Pulp'
-    - regex: '(?:WIKO-)?Robby'
-      model: 'Robby'
+    - regex: '(?:WIKO-)?Robby(2)?'
+      model: 'Robby$1'
     - regex: '(?:WIKO-)?U PULSE LITE'
       model: 'U Pulse Lite'
     - regex: '(?:WIKO-)?U PULSE'
@@ -18089,8 +18097,8 @@ Xiaomi:
       model: 'Mi 5X'
     - regex: 'Xiaomi_2013061|2013061 Build'
       model: 'Mi 3'
-    - regex: 'Mi-4c(?:[);/ ]|$)'
-      model: 'Mi 4C'
+    - regex: 'Mi[- ]([43])c(?:[);/ ]|$)'
+      model: 'Mi $1C'
     - regex: 'MI 4W(?:[);/ ]|$)'
       model: 'Mi 4W'
     - regex: 'Mi_4i(?:[);/ ]|$)'
@@ -18099,6 +18107,8 @@ Xiaomi:
       model: 'Mi 4 LTE'
     - regex: 'MI MAX ([23])(?:[);/ ]|$)'
       model: 'Mi Max $1'
+    - regex: 'MI MAX(?:[);/ ]|$)'
+      model: 'Mi Max'
     - regex: 'Mi[ _]A2[ _]Lite(?:[);/ ]|$)'
       model: 'Mi A2 Lite'
     - regex: 'Mi MIX 3 5G(?:[);/ ]|$)'
@@ -18562,9 +18572,9 @@ Vivax:
       device: 'tv'
       model: '$1'
 
-# MLS
+# MLS or Making Life Simple
 MLS:
-  regex: 'IQ(?:0705|L550|1010w?|1012N?|1019N|1025|1380|1401|1436|1452a|1453|1470|1502a|1511|1552|1553|1568|1570|1805N|1806|1808|1810B_M|1832|1850|1890|5017|9610|181011N|E[12]00|EL41|G550|GW516|L30|L5[01]|M801|M1001|N700|P50|R300|S300|S1001|W503|W511T|W553N?|W60[38]|W626|M960|D700|9013_4N)(?:[);/ ]|$)'
+  regex: 'IQ(?:0705|L550|1010w?|1012N?|1019N|1025|1380|1401|1436|1452a|1453|1470|1502a|1511|1552|1553|1568|1570|1805N|1806|1808|1810B_M|1832|1850|1890|5017|9610|181011N|A27X_E|E[12]00|EL41|G550|GW516|L30|L5[01]|M801|M1001|N700|P50|R300|S300|S1001|W503|W511T|W553N?|W60[38]|W626|M960|D700|9013_4N)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'IQ0705(?:[);/ ]|$)'
@@ -18648,6 +18658,8 @@ MLS:
       model: 'Energy 4G'
     - regex: 'iQE200(?:[);/ ]|$)'
       model: 'MX 4G'
+    - regex: 'iQA27X_E(?:[);/ ]|$)'
+      model: 'MX (2019)'
     - regex: 'IQEL41(?:[);/ ]|$)'
       model: 'Fab 4G'
     - regex: 'IQL30(?:[);/ ]|$)'
@@ -19059,7 +19071,7 @@ Zopo:
 
 # ZTE
 ZTE:
-  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:V0820|L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra|Q Lux)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|503A|50[5678]J|51[0123]J|521J|523J_V1|529Jq?|5[345]1J|5[48]9J|569[HJ]|5[67]3J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|65[19]J|907J)|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:5151V|610DL|6400C|6410S|233V|331|5031O|559DL|6621O|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|992|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|V769M|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|902ZT|KIS II Max|Kis 3|K3DX-V5G|Z930L|Optus X|Blade[ _](A510|A[357] 2019-T|A6 MAX|A0622|X9)|Z3153V|Z836F|Nubia Z(?:9|11)|Ctyon-A9|602ZT|MO-01[JK]|Z963U|402ZT|P545|P609|dandelion|901ZT|A00[13]ZT|Z-01K|UZTE (?:GRAND V7|V808)|ZR01|ZTG01|K8[37]CA|VERGATARIO ?5(?:PLUS)?)(?:[);/ ]|$)'
+  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:V0820|L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra|Q Lux)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|503A|50[5678]J|51[0123]J|521J|523J_V1|529Jq?|5[345]1J|5[48]9J|569[HJ]|5[67]3J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|65[19]J|907J)|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:5151V|610DL|6400C|6410S|233V|331|5031O|559DL|6621O|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|992|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|V769M|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|902ZT|KIS II Max|Kis 3|K3DX-V5G|Z930L|Optus X|Blade[ _](A510|A[357] 2019-T|A6 MAX|A0622|X9)|Z3153V|Z836F|Nubia Z(?:9|11)|Ctyon-A9|602ZT|MO-01[JK]|Z963U|402ZT|P545|P609|dandelion|901ZT|A00[13]ZT|Z-01K|UZTE (?:GRAND V7|V808)|ZR01|ZTG01|K8[37]CA|VERGATARIO ?5(?:PLUS)?|Axon mini)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -19457,7 +19469,7 @@ ZTE:
       model: 'Avail 2'
     - regex: '(?:Z999|Z-01K)(?:[);/ ]|$)'
       model: 'Axon M'
-    - regex: 'B2016'
+    - regex: 'B2016|Axon mini'
       model: 'Axon Mini'
     - regex: 'A2015'
       model: 'Axon Tianji'
@@ -19679,10 +19691,10 @@ Inoi:
 
 # Vertex (vertex-digital.ru)
 Vertex:
-  regex: '(?:Luck|Lion_Dual|V709X|Tab [43]G (?:7-2|8-1|10-1)|Pro_P3[01]0_4G|Lion_DC|Baccara|Eagle[ _]4G|ImpressMAX)(?:[);/ ]|$)|Impress[ _]([^;/]+)(?:Build|\))'
+  regex: '(?:Luck|Luck_L1[02]0_[34]G|Lion_Dual|V709X|Tab [43]G (?:7-2|8-1|10-1)|Pro_P3[01]0_4G|Lion_DC|Baccara|Eagle[ _]4G|ImpressMAX)(?:[);/ ]|$)|Impress[ _]([^;/]+)(?:Build|\))'
   device: 'smartphone'
   models:
-    - regex: '(Lion_Dual|Lion_DC|Baccara|Eagle[ _]4G|Luck)(?:[);/ ]|$)'
+    - regex: '(Lion_Dual|Lion_DC|Baccara|Eagle[ _]4G|Luck_L1[02]0_[34]G|Luck)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'Impress ?MAX(?:[);/ ]|$)'
       model: 'Impress Max'
@@ -19702,12 +19714,6 @@ Vertex:
     - regex: 'Tab ([43])G ([78]|10)-([21])'
       device: 'tablet'
       model: 'Tab $1G $2.$3"'
-
-# Devices with undectable brand, but detectable model
-Unknown:
-  regex: 'WebTV/(\d+\.\d+)'
-  device: 'tv'
-  model: 'Web TV'
 
 # Starway
 Starway:
@@ -23602,13 +23608,15 @@ Kyowon:
 
 # LT Mobile or LT Electronics (lt-smartphone.com)
 LT Mobile:
-  regex: '(?:LT-NOTE 10S|LT NOTE 10M|LT C3100)'
+  regex: 'LT[ _-](?:NOTE 10[SM]|C3100|S10[ _]Lite)'
   device: 'smartphone'
   models:
     - regex: 'LT[- ]NOTE (10[SM])'
       model: 'Note $1'
     - regex: 'LT C3100'
       model: 'P9'
+    - regex: 'LT[ _]S10[ _]Lite'
+      model: 'S10 Lite'
 
 # ONYX BOOX (onyx-boox.ru)
 ONYX BOOX:
@@ -24055,3 +24063,15 @@ M-Horse:
   models:
     - regex: 'Pure ?([13]|2A)(?:[);/ ]|$)'
       model: 'Pure $1'
+
+# Devices with undectable brand, but detectable model
+Unknown:
+  regex: 'WebTV/(\d+\.\d+)|(?:M10 Ultra)(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'WebTV/(\d+\.\d+)'
+      device: 'tv'
+      model: 'Web TV'
+    - regex: 'M10 Ultra(?:[);/ ]|$)'
+      device: 'phablet'
+      model: 'M10 Ultra' # clone xiaomi m10 ultra
