feat(device) detect brand Archos models: Core 57S Ultra, Core 55S Ultra, Access 50S 4G feat(device) detect brand Bravis model: A511 Harmony feat(device) detect brand Elephone model: Soldier feat(device) detect brand MyPhone model: Hammer Iron 3 feat(device) detect brand OPPO models: R11s, R11 Plus feat(device) detect brand Nomi models: Infinity X1 (i5710), Corsa 4 Pro LTE (C070044),  Ultra 4 3G (C101014), Ultra 4 LTE (C101034), Ultra 4 Pro LTE (C101044), Corsa 4 Light 3G (C070014L),  Libra 4 3G (C080014)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1220,7 +1220,7 @@ AllCall:
 
 # Bravis
 Bravis:
-  regex: 'Bravis[ _]|A501 Bright|A552 JOY Max|A504 Trace|A505 JOY Plus|A503 Joy|NB(?:106M|10[1-8]|751|7[145]|8[57]1|76)|NP101|NB961|NP 104 3G|B501|N1-570 Space|Atlas A551|A512 Harmony Pro|A510_Jeans_4G|A509_Jeans|N1_550_Cruiser'
+  regex: 'Bravis[ _]|A501 Bright|A552 JOY Max|A504 Trace|A505 JOY Plus|A503 Joy|NB(?:106M|10[1-8]|751|7[145]|8[57]1|76)|NP101|NB961|NP 104 3G|B501|N1-570 Space|Atlas A551|A511 Harmony|A512 Harmony Pro|A510_Jeans_4G|A509_Jeans|N1_550_Cruiser'
   device: 'smartphone'
   models:
     - regex: 'A501 BRIGHT'
@@ -1257,6 +1257,8 @@ Bravis:
       model: 'A504 Trace'
     - regex: 'A512 Harmony Pro'
       model: 'A512 Harmony Pro'
+    - regex: 'A511 Harmony'
+      model: 'A511 Harmony'
     - regex: 'A510_Jeans_4G'
       model: 'A510 Jeans 4G'
     - regex: 'A509_Jeans'
@@ -5291,7 +5293,7 @@ Eks Mobility:
 
 # Elephone
 Elephone:
-  regex: 'Elephone|Vowney(?: Lite)?|P6000(?!_Plus)( ?Pro| ?Plus|\+| ?02| 5.0 01)?'
+  regex: 'Elephone|Vowney(?: Lite)?|P6000(?!_Plus)( ?Pro| ?Plus|\+| ?02| 5.0 01)?|Soldier'
   device: 'smartphone'
   models:
     - regex: 'Elephone Trunk(?:[);/ ]|$)'
@@ -5308,6 +5310,8 @@ Elephone:
       model: 'P6000 01'
     - regex: 'P6000 ?Pro(?:[);/ ]|$)'
       model: 'P6000 Pro'
+    - regex: 'Soldier(?:[);/ ]|$)'
+      model: 'Soldier'
     - regex: '(?:Elephone[ _])?(P[768]000|S2)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'Elephone[ _\-]([^/;]+)(?: Build|[;)])'
@@ -12068,14 +12072,16 @@ Nomi:
       model: 'Evo X2'
     - regex: 'i5050(?:[);/ ]|$)'
       model: 'Evo Z'
-    - regex: 'Nomi_i4510(?:[);/ ]|$)'
+    - regex: '(?:Nomi_)?i4510(?:[);/ ]|$)'
       model: 'Beat M'
-    - regex: 'Nomi_i4500(?:[);/ ]|$)'
+    - regex: '(?:Nomi_)?i4500(?:[);/ ]|$)'
       model: 'Beat M1'
     - regex: 'i5532(?:[);/ ]|$)'
       model: 'Space X2'
     - regex: 'i5510(?:[);/ ]|$)'
       model: 'Space M'
+    - regex: '(?:Nomi_)?i5710(?:[);/ ]|$)'
+      model: 'Infinity X1'
     - regex: '(?:Nomi[ _])?i(50[015]|450|40[01]|55[02])(?:[);/ ]|$)'
       model: 'i$1'
     - regex: 'C101010 Ultra2'
@@ -12083,6 +12089,15 @@ Nomi:
       device: 'tablet'
     - regex: '(?:Nomi_)?C101040'
       model: 'Ultra 3 Pro'
+      device: 'tablet'
+    - regex: '(?:Nomi_)?C101014'
+      model: 'Ultra 4 3G'
+      device: 'tablet'
+    - regex: '(?:Nomi_)?C101034'
+      model: 'Ultra 4 LTE'
+      device: 'tablet'
+    - regex: '(?:Nomi_)?C101044'
+      model: 'Ultra 4 Pro LTE'
       device: 'tablet'
     - regex: '(?:Nomi_)?C070010'
       device: 'tablet'
@@ -12093,14 +12108,23 @@ Nomi:
     - regex: '(?:Nomi_)?C070011'
       model: 'Corsa 2'
       device: 'tablet'
+    - regex: '(?:Nomi_)?C070014L'
+      model: 'Corsa 4 Light 3G'
+      device: 'tablet'
     - regex: '(?:Nomi_)?C0700[13]4'
       model: 'Corsa 4 LTE'
+      device: 'tablet'
+    - regex: '(?:Nomi_)?C070044'
+      model: 'Corsa 4 Pro LTE'
       device: 'tablet'
     - regex: '(?:Nomi_)?C080012'
       model: 'Libra 3 3G'
       device: 'tablet'
     - regex: '(?:Nomi_)?C080034'
       model: 'Libra 4 LTE'
+      device: 'tablet'
+    - regex: '(?:Nomi_)?C080014'
+      model: 'Libra 4 3G'
       device: 'tablet'
     - regex: '(?:Nomi_)?C07008'
       model: 'Sigma'
@@ -12839,9 +12863,11 @@ OPPO:
       model: 'Piano'
     - regex: '(?:OPPO[ _]?)?CPH1707(?:[);/ ]|$)'
       model: 'R11'
+    - regex: '(?:OPPO[ _]?)?R11 Pluskt(?:[);/ ]|$)'
+      model: 'R11 Plus'
     - regex: 'R8001(?:[);/ ]|$)'
       model: 'R1K'
-    - regex: '(?:OPPO[ _]?)?CPH1719(?:[);/ ]|$)'
+    - regex: '(?:OPPO[ _]?)?(?:CPH1719|R11st?)(?:[);/ ]|$)'
       model: 'R11s'
     - regex: '(?:OPPO[ _]?)?CPH1721(?:[);/ ]|$)'
       model: 'R11s Plus'
